# meal-planner-agentic

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  app.py  conftest.py  docker-compose.yml  models.py  pyproject.toml  storage.py  tracing.py  update.sh
agents/: orchestrator.py  prompts.py  recipe_finder.py
docs/: BRD.md  BUILD_SPEC.md  PRD.md  architecture.yaml
docs/superpowers/plans/: 2026-04-15-meal-planner-agentic-plan.md  2026-04-16-meal-planner-enhancements.md  2026-05-03-edit-recipes-and-tracing.md  2026-05-05-foundations-schema-bump.md
docs/superpowers/specs/: 2026-04-15-meal-planner-agentic-design.md  2026-05-03-edit-recipes-and-tracing-design.md  2026-05-05-foundations-schema-bump-design.md
scripts/: cookidoo_smoke.py
tests/: test_cookidoo_adapter.py  test_models.py  test_orchestrator.py  test_profile.py  test_recipes_crud.py  test_search.py  test_state.py  test_state_schema_2026_05_05.py  test_storage.py  test_tracing.py  test_validate.py
tests/evals/: conftest.py  test_capabilities.py  test_workflows.py
tests/evals/fixtures/: profile_basic.json  recipes_seed.json
tools/: cookidoo.py  profile.py  recipes.py  state.py  validate.py
